--- a/styles/_cards.scss
+++ b/styles/_cards.scss
@@ -52,3 +52,65 @@
     }
   }
 }
+
+.img-card {
+  position: relative;
+  max-width: 325px;
+  height: 295px;
+  border-radius: 20px;
+  background-color: color.adjust($color_white, $alpha: -0.85);
+  @include d-flex(space-between, center, nowrap, column, 0, 0);
+  overflow: hidden;
+  flex-shrink: 0;
+
+  &__title {
+    @include font(23px, 400, $color_white);
+    @include d-flex(center, center, nowrap, column, 0, 0);
+    flex-grow: 1;
+  }
+
+  &__preview {
+    width: 100%;
+    height: 220px;
+  }
+
+  &__btn {
+    @include position(absolute, 1, -1, bottom, left, -20px, -30px);
+    width: 120px;
+    height: 90px;
+    border-radius: 20px;
+    border: none;
+    background-color: $color_white;
+    rotate: z 7deg;
+    transition: rotate 0.2s;
+
+    &-icon {
+      width: 36px;
+      height: 23px;
+      fill: $color_black;
+      rotate: z -7deg;
+      translate: 12px -3px;
+    }
+
+    &:hover {
+      cursor: pointer;
+      rotate: z 7deg;
+      scale: 1.3;
+      backdrop-filter: blur(40px);
+
+      .img-card__btn-icon {
+        rotate: z -7deg;
+        translate: 17px -8px;
+      }
+    }
+  }
+  &:hover {
+    cursor: pointer;
+    box-shadow: 0 20px 30px 0 rgba(0, 0, 0, 0.3),
+      inset 0 -5px 70px 25px rgba(0, 0, 0, 0.3);
+    // background: rgba(255, 255, 255, 0.1);
+  }
+  @media (max-width: $media_min) {
+    width: 320px;
+  }
+}
