--- a/styles/_cards.scss
+++ b/styles/_cards.scss
@@ -114,3 +114,32 @@
     width: 320px;
   }
 }
+
+.wave-card {
+  width: 500px;
+  height: 275px;
+  background: url('../assets/wave_card_bg.svg') center/contain no-repeat;
+
+  @include d-flex(start, start, nowrap, column, 0, 35px);
+
+  &__avatar {
+    margin: 20px 0 0 20px;
+  }
+
+  &__quote {
+    @include font(20px, 400, $color_white);
+    line-height: 1.3;
+    margin: 0 45px 0 30px;
+    text-align: justify;
+  }
+
+  @media (max-width: $media_md) {
+    width: 330px;
+    row-gap: 15px;
+    background: url('../assets/wave_card_bg.svg') 50% 0 / contain no-repeat;
+
+    &__quote {
+      @include font(13px, 400, $color_white);
+    }
+  }
+}
