--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -85,5 +85,70 @@
         }
       }
     }
+    @media (max-width: $media_md) {
+      &__links,
+      & .covid,
+      & .globe {
+        display: none;
+      }
+    }
+  }
+}
+
+.mobile-nav {
+  display: none;
+
+  &__burger {
+    @include position(absolute, 10, -1, top, right, 13px, 20px);
+
+    &-icon {
+      width: 33px;
+      height: 22px;
+      stroke: $color_white;
+      @extend %hover-black-icon;
+    }
+  }
+
+  &__toggler {
+    display: none;
+
+    &:checked + .nav {
+      translate: 0;
+    }
+  }
+
+  & .nav {
+    padding: 100px 70px 0;
+    @include position(fixed, 9999, 0);
+    background-color: color.adjust($color_white, $alpha: -0.85);
+    backdrop-filter: blur(10px);
+
+    translate: 100% 0;
+    transition: translate 0.3s;
+
+    &__list {
+      @include d-flex(start, start, nowrap, column, 0, 20px);
+      &-item {
+        &-link {
+          @include font(36px, 400, $color_white);
+          text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+        }
+      }
+    }
+
+    &__close {
+      @include position(absolute, 10, -1, top, right, 13px, 20px);
+
+      &-icon {
+        width: 25px;
+        height: 22px;
+        stroke: $color_white;
+        @extend %hover-black-icon;
+      }
+    }
+  }
+
+  @media (max-width: $media_md) {
+    display: block;
   }
 }
